Fix centered image alignment on frontend.

--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -35,6 +35,12 @@
 			left: 50%;
 		}
 	}
+	
+	.alignwide, .aligncenter, .alignfull {
+		img {
+			margin: 0 auto;
+		}
+	}
 
 	.aligncenter {
 		margin: 1em auto;
